--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "exports": "./server",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=production node server",
-    "dev": "DEBUG=hello-zoom:*,axios NODE_ENV=development node server",
+    "start": "NODE_ENV=production node app.js",
+    "dev": "DEBUG=hello-zoom:* NODE_ENV=development node app.js",
     "lint": "eslint .",
     "format": "prettier --write '**/*.js'",
     "prepare": "husky install"
@@ -14,12 +14,17 @@
   "dependencies": {
     "axios": "^0.26.0",
     "compression": "^1.7.4",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "~1.4.6",
     "debug": "~4.3.3",
     "dotenv": "^16.0.0",
     "express": "~4.17.3",
+    "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "http-errors": "^2.0.0",
+    "https-localhost": "^4.7.1",
+    "mongoose": "^6.2.3",
+    "mongoose-encryption": "^2.1.2",
     "morgan": "~1.10.0"
   },
   "devDependencies": {
