--- a/.env
+++ b/.env
@@ -1,12 +1,3 @@
-# Port to serve on
-PORT=3000
-
-# Base URL for Zoom
-ZM_HOST=https://zoom.us
-
-# Base URL for Zoom API
-ZM_API=${ZM_HOST}/v2/
-
 # Client ID for your Zoom App
 ZM_CLIENT_ID=
 
@@ -16,6 +7,24 @@ ZM_CLIENT_SECRET=
 # Redirect URI set for your app in the Zoom Marketplace
 ZM_REDIRECT_URI=
 
-# Signs session cookies (Access tokens)
-# $ openssl rand -hex 16
-SESSION_SECRET=
+# Port to serve on
+PORT=3000
+
+# Base URL for Zoom
+ZM_HOST=https://zoom.us
+
+# Base URL for Zoom API
+ZM_API=${ZM_HOST}/v2/
+
+# Sign Session Cookies
+SESSION_SECRET=${_SESSION_SECRET}
+
+# Connect to MongoDB
+MONGO_USER=ZoomDeveloper
+MONGO_PASSWORD=${_MONGO_PASSWORD}
+MONGO_CONNSTR=mongodb://${MONGODB_USER}:${MONGODB_PASSWORD}@mongodb
+
+# Encrypt MongoDB (Access Tokens)
+MONGOOSE_KEY=${_MONGOOSE_KEY}
+MONGOOSE_SIGN=${_MONGOOSE_SIGN}
+
