refactored env car checks

--- a/.env
+++ b/.env
@@ -4,17 +4,12 @@ ZM_CLIENT_ID=
 # Client Secret for your Zoom app
 ZM_CLIENT_SECRET=
 
-# Redirect URI set for your app in the Zoom Marketplace
+# Redirect URI whitelisted for your Zoom App
 ZM_REDIRECT_URI=
 
-# Port to serve on
-PORT=3000
-
-# Base URL for Zoom
+# Base URLs for Zoom
 ZM_HOST=https://zoom.us
-
-# Base URL for Zoom API
-ZM_API=${ZM_HOST}/v2/
+ZM_API=https://api.zoom.us/v2/
 
 # Sign Session Cookies
 SESSION_SECRET=${_SESSION_SECRET}
