refactored gen-secrets

--- a/.env
+++ b/.env
@@ -4,12 +4,11 @@ ZM_CLIENT_ID=
 # Client Secret for your Zoom app
 ZM_CLIENT_SECRET=
 
-# Redirect URI whitelisted for your Zoom App
+# Redirect URI set for your app in the Zoom Marketplace
 ZM_REDIRECT_URI=
 
-# Base URLs for Zoom
+# Base URL for Zoom
 ZM_HOST=https://zoom.us
-ZM_API=https://api.zoom.us/v2/
 
 # Sign Session Cookies
 SESSION_SECRET=${_SESSION_SECRET}
