--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,24 @@
+version: '3'
 services:
   mongodb:
     image: mongo:5.0
-    container_name: mongodb
+    container_name: "mongodb"
     restart: always
     ports:
-      - 27017:27017
+      - "27017:27017"
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=${MONGODB_USER}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGODB_PASSWORD}
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
   app:
     build: ./
-    container_name: zoom-app
+    container_name: "zoom-app"
     working_dir: /home/node/app
     ports:
-      - 3000:3000
+      - "3000:3000"
     volumes:
       - ./:/home/node/app
       - /home/node/app/node_modules
+    environment:
+      - MONGO_CONNSTR=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongodb:27017
     depends_on:
-      - redis
+      - mongodb
