removed connection string from .env

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ ZM_CLIENT_SECRET=
 # Redirect URI set for your app in the Zoom Marketplace
 ZM_REDIRECT_URI=
 
-# Base URL for Zoom
+# Base URL for Zoom -  can be changed for ZfG customers
 ZM_HOST=https://zoom.us
 
 # Sign Session Cookies
@@ -16,7 +16,6 @@ SESSION_SECRET=${_SESSION_SECRET}
 # Connect to MongoDB
 MONGO_USER=ZoomDeveloper
 MONGO_PASSWORD=${_MONGO_PASSWORD}
-MONGO_CONNSTR=mongodb://${MONGODB_USER}:${MONGODB_PASSWORD}@mongodb
 
 # Encrypt MongoDB (Access Tokens)
 MONGOOSE_KEY=${_MONGOOSE_KEY}
