--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "NODE_ENV=production node app.js",
     "dev": "DEBUG=hello-zoom:* NODE_ENV=development node app.js",
-    "postinstall": "chmod +x ./gen-secrets.sh && $_",
-    "prepare": "husky install"
+    "prepare": "chmod +x ./gen-secrets.sh && $_",
+    "postprepare": "husky install"
   },
   "dependencies": {
     "axios": "^0.26.0",
