--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ ZM_CLIENT_SECRET=
 # Redirect URI set for your app in the Zoom Marketplace
 ZM_REDIRECT_URI=
 
-# Base URL for Zoom -  can be changed for ZfG customers
+# Base URL for Zoom - can be changed for ZfG customers
 ZM_HOST=https://zoom.us
 
 # Sign Session Cookies
@@ -15,9 +15,15 @@ SESSION_SECRET=${_SESSION_SECRET}
 
 # Connect to MongoDB
 MONGO_USER=ZoomDeveloper
-MONGO_PASSWORD=${_MONGO_PASSWORD}
+MONGO_PASS=${_MONGO_PASS}
+MONGO_URL=mongodb://${MONGO_USER}:${MONGO_PASS}@mongodb
 
 # Encrypt MongoDB (Access Tokens)
-MONGOOSE_KEY=${_MONGOOSE_KEY}
-MONGOOSE_SIGN=${_MONGOOSE_SIGN}
+MONGO_KEY=${_MONGO_KEY}
+MONGO_SIGN=${_MONGO_SIGN}
+
+
+
+
+
 
