pull docker port from .env

--- a/.env
+++ b/.env
@@ -10,6 +10,9 @@ ZM_REDIRECT_URI=
 # Base URL for Zoom - can be changed for ZfG customers
 ZM_HOST=https://zoom.us
 
+# Port to serve from
+PORT=3000
+
 # Sign Session Cookies
 SESSION_SECRET=${_SESSION_SECRET}
 
@@ -21,9 +24,3 @@ MONGO_URL=mongodb://${MONGO_USER}:${MONGO_PASS}@mongodb
 # Encrypt MongoDB (Access Tokens)
 MONGO_KEY=${_MONGO_KEY}
 MONGO_SIGN=${_MONGO_SIGN}
-
-
-
-
-
-
