--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,24 @@ version: '3'
 services:
   mongodb:
     image: mongo:5.0
-    container_name: "mongodb"
+    container_name: mongodb
     restart: always
     ports:
       - "27017:27017"
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_USER}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASS}
-  app:
+  zoom-app:
     build: ./
-    container_name: "zoom-app"
     working_dir: /home/node/app
+    container_name: 'zoom-app'
+    restart: always
+    environment:
+      - NODE_ENV=development
+      - DEBUG=hello-zoom:*
     ports:
       - "${PORT}:${PORT}"
     volumes:
       - ./:/home/node/app
-      - /home/node/app/node_moduless
     depends_on:
       - mongodb
