added app name to .env

--- a/.env
+++ b/.env
@@ -10,6 +10,9 @@ ZM_REDIRECT_URI=
 # Base URL for Zoom - can be changed for ZfG customers
 ZM_HOST=https://zoom.us
 
+# Shortname used for debug
+APP_NAME=hello-zoom
+
 # Port to serve from
 PORT=3000
 
