changed URI to URL in config

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ ZM_CLIENT_ID=
 ZM_CLIENT_SECRET=
 
 # Redirect URI set for your app in the Zoom Marketplace
-ZM_REDIRECT_URI=
+ZM_REDIRECT_URL=
 
 # Base URL for Zoom - can be changed for ZfG customers
 ZM_HOST=https://zoom.us
