--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "dev": "docker compose up zoom-app",
-    "predev": "chmod +x ./gen-secrets.sh && $_",
+    "predev": "docker compose up -d mongodb",
+    "dev": "concurrently -k -c inverse.magenta,inverse.green npm:watch npm:start",
+    "watch": "babel app --out-dir dist --watch --ignore \"**/vendor/*.js\" --copy-files",
     "build": "docker build --build-arg NODE_ENV=production -t zoom-app .",
     "prepare": "npx husky install",
-    "preprepare": "[ -d .git ] && [ -f .env ] && git update-index --assume-unchanged .env || true",
-    "clean": "docker compose down -v --remove-orphans --rmi all"
+    "postprepare": "chmod +x ./gen-secrets.sh && $_",
+    "clean": "docker compose down -v --remove-orphans --rmi local"
   },
   "dependencies": {
     "axios": "^0.26.0",
     "compression": "^1.7.4",
+    "concurrently": "^7.1.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "~1.4.6",
     "debug": "~4.3.3",
@@ -33,12 +35,27 @@
     "pug": "^3.0.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "babel-watch": "^7.7.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.4.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
     "prettier": "^2.5.1"
   },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  },
+  "browserslist": [
+    "> 1%",
+    "last 3 versions",
+    "not dead",
+    "not ie 11"
+  ],
   "lint-staged": {
     "*.js": [
       "eslint --cache --fix",
