--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "scripts": {
     "prestart": "npm run build",
     "start": "node app.js",
-    "dev": ".scripts/dev.sh",
-    "build": "babel public -d dist -D",
+    "dev": "scripts/dev.sh",
+    "build": "rollup -c",
     "prepare": "npx husky install",
-    "postprepare": "chmod -R +x .scripts && $_/gen-secrets.sh"
+    "postprepare": "chmod -R +x scripts && $_/gen-secrets.sh"
   },
   "dependencies": {
     "axios": "^0.26.0",
@@ -18,6 +18,7 @@
     "concurrently": "^7.1.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "~1.4.6",
+    "core-js": "^3.21.1",
     "debug": "~4.3.3",
     "dotenv": "^16.0.0",
     "dotenv-cli": "^5.1.0",
@@ -28,21 +29,32 @@
     "helmet": "^5.0.2",
     "http-errors": "^2.0.0",
     "https-localhost": "^4.7.1",
+    "moment": "^2.29.2",
     "mongoose": "^6.2.3",
     "mongoose-encryption": "^2.1.2",
     "morgan": "~1.10.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "rollup-plugin-inline-code": "^1.2.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.9",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^21.0.3",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-url": "^6.1.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.4.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
+    "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
-    "nodemon": "^2.0.15"
+    "rollup": "^2.70.1",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "nodemonConfig": {
     "quiet": true,
@@ -53,20 +65,6 @@
       ".env"
     ]
   },
-  "babel": {
-    "ignore": [
-      "**/vendor/*.js"
-    ],
-    "presets": [
-      "@babel/preset-env"
-    ]
-  },
-  "browserslist": [
-    "> 1%",
-    "last 3 versions",
-    "not dead",
-    "not ie 11"
-  ],
   "lint-staged": {
     "*.js": [
       "eslint --cache --fix",
