--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^7.1.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "~1.4.6",
+    "cookie-session": "^2.0.0",
     "debug": "~4.3.3",
     "dotenv": "^16.0.0",
     "dotenv-cli": "^5.1.0",
@@ -42,13 +43,13 @@
     "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-url": "^6.1.0",
+    "core-js": "^3.21.1",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.4.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
-    "core-js": "^3.21.1",
     "rollup": "^2.70.1",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-delete": "^2.0.0",
